# terminal_tarot

./: .gitignore  Cargo.toml  README.md  card_examples  debug_spread.json  flake.nix  notes.md  shell.nix  tarot_interpretations.json
src/default_files/: mod.rs
src/default_files/included_spreads/: basic_three_card.json  celtic_cross.json  debug_spread.json  single_card_spread.json
src/spread/: mod.rs  test_utils.rs
term_tarot/: Cargo.toml  main.rs
term_tarot/src/: deck.rs  lib.rs  main.rs  spread.rs
term_tarot/src/deck/: .mod.rs.swp  mod.rs  test_utils.rs
term_tarot/src/default_files/: mod.rs
term_tarot/src/default_files/included_decks/: default_deck.json
term_tarot/src/spread/: mod.rs  test_utils.rs
term_tarot/src/stored_element/: mod.rs
