[package]
name = "terminal_tarot"
version = "0.1.0"
authors = ["Andrew Swanson <andrew@swanso.net>"]
edition = "2018"
description = "Toy program for making tarot readings at the terminal"
readme = "README.md"
license = "GPL-3.0"

[dependencies]

serde = { version = "1.0", features = [ "derive"] }
serde_json = "1.0"
rand = "0.7.0"
clap = "2.33.0"
pager = "0.15.0"
dialoguer = "0.5.0"
walkdir = "2"
directories = "2.0.2"
